검색 - 리뷰(추천,최신),유저(id,닉네임) 검색 구현

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -842,6 +842,7 @@
                 let regDate = (findReview.regDate === findReview.modDate) ? formatRegDate(findReview.regDate) : formatRegDate(findReview.modDate) + ' (수정됨)';
 
                 $('#writer-info').click(function (){
+                    savePage();
                     location.href = `/mypage/${writer.id}`
                 })
                 $('#writer-name').text(writer.name);
@@ -867,6 +868,7 @@
                     $('#review-book-info').addClass('d-flex').show();
                     $('#review-book-info').addClass('cursor-pointer')
                     $('#review-book-info').off().click(function (){
+                        savePage();
                         location.href = `../book?bookId=${findReview.reviewBookId}`;
                     })
                     $('#review-book-title').text(findReview.reviewBookTitle);
@@ -1456,11 +1458,12 @@
         if(tourItemId !== undefined){
             $('#touritem-wrap').css('cursor','pointer');
             $('#touritem-wrap').click(function (){
+                savePage();
                 location.href = `../info/content/${tourItemId}`;
             })
             touritemInfoTimer = setTimeout(function () {
                 showTourItemSimpleInfo(tourItemId)
-            },300)
+            },200)
         }
     })
     $('#touritem-wrap').mouseleave(function (){
@@ -2137,7 +2140,7 @@
 
 
     function showBookmark() {
-        let time = 500;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
+        let time = 300;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
         let loadScroll; // 다음 페이지 로딩 후에도 유지할 스크롤 위치를 저장할 변수
         if(!firstLoad){
             scrollPage += 1;
@@ -2208,7 +2211,7 @@
     }
 
     function showReview() {
-        let time = 500;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
+        let time = 300;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
         let loadScroll; // 다음 페이지 로딩 후에도 유지할 스크롤 위치를 저장할 변수
         if(!firstLoad){
             scrollPage += 1;
@@ -2237,8 +2240,8 @@
                         '</div>';
                     gallery.append(messageHtml);
                 }else {
+                    firstLoad = false;
                     setTimeout(() => {
-                        firstLoad = false;
                         $(".loader").hide()
                         $.each(reviewList, function (index, review){
                             let tempHtml = `<div class="gallery-item" tabIndex="0" onclick="openViewer(${review.reviewId})">`
@@ -2282,7 +2285,7 @@
     }
 
     function showReviewBook(){
-        let time = 500;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
+        let time = 300;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
         let loadScroll; // 다음 페이지 로딩 후에도 유지할 스크롤 위치를 저장할 변수
         if(!firstLoad){
             scrollPage += 1;
@@ -2311,8 +2314,8 @@
                         '</div>';
                     gallery.append(messageHtml);
                 }else {
+                    firstLoad = false;
                     setTimeout(() => {
-                        firstLoad = false;
                         $(".loader").hide()
                         $.each(reviewBookList, function (index, reviewBook){
                             let coverPath = reviewBook.coverFilePath == null ? '../assets/img/review_book_cover.jpg' : `/api/image/book/${reviewBook.coverFilePath}`;
@@ -2347,7 +2350,7 @@
     }
 
     function showLike(){
-        let time = 500;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
+        let time = 300;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
         let loadScroll; // 다음 페이지 로딩 후에도 유지할 스크롤 위치를 저장할 변수
         if(!firstLoad){
             scrollPage += 1;
@@ -2376,8 +2379,8 @@
                         '</div>';
                     gallery.append(messageHtml);
                 }else {
+                    firstLoad = false;
                     setTimeout(() => {
-                        firstLoad = false;
                         $(".loader").hide()
                         $.each(likeReviewList, function (index, review){
                             let tempHtml = `<div class="gallery-item" tabIndex="0" onclick="openViewer(${review.reviewId})">`
@@ -2438,7 +2441,7 @@
         console.log(scrollPosition);
         for(let page = 0; page <= sessionPage; page++){
             back = true;
-            console.log(`${scrollPage}, ${page}`);
+
             switch (tabType){
                 case "BOOKMARK":
                     showBookmark();
